<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtCorreo"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edtContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtContraseña"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtemail" />


    <Button
        android:id="@+id/btnsesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="51dp"
        android:background="#CAE91E63"
        android:onClick="loguearUsuario"
        android:text="@string/btnAceptar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <Button
        android:id="@+id/btnregistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="9dp"
        android:background="#CAE91E63"
        android:onClick="CambioRegistro"
        android:text="@string/btnRegistro"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsesion" />



</LinearLayout>