<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registry">

    <Button
        android:id="@+id/btnrGuardar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:background="#00BCD4"
        android:text="@string/btnRegistro"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRepetir" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="113dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="141dp"
        android:layout_marginRight="141dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/registro" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="@string/edtnombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="@string/edtapellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="@string/edttelefono"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/edtRcontraseña"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="@string/edtContraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRcorreo" />

    <EditText
        android:id="@+id/edtRepetir"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="@string/edtrepetir"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRcontraseña" />

    <EditText
        android:id="@+id/edtRcorreo"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="@string/edtCorreo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />
</androidx.constraintlayout.widget.ConstraintLayout>